--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,15 +1,56 @@
 
 body {
-    background-color: lightsteelblue;
+    background-color: white;
+}
+
+#app {
+    width: 100%;
+    margin: 0px 0px;
+    padding: 0px 0px;
+    max-height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 h1 {
     font-size: 30px;
 }
 
+.container {
+    width: 100%;
+    max-width: 2000px;
+    height: 100vh;
+    max-height: 100vh;
+    margin: 0px 0px;
+    background-color: lightsteelblue;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#content-container {
+    padding: 150px 0px 0px 0px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#messages-container {
+    margin-top: 20px;
+}
+
 #banner {
+    position: fixed;
+    top: 0px;
+    left: 0px;
     height: 100px;
-    background-color: steelblue;
+    width: 100%;
+    background-color: steelblue; 
     color: white;
     margin-bottom: 40px;
     display: flex;
@@ -18,12 +59,6 @@ h1 {
     align-items: center;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;    
-}
 
 .message-form-card {
     width: 400px;
@@ -31,25 +66,24 @@ h1 {
 }
 
 #logo {
-    display: inline;
+    position: fixed;
+    top: 20px;
+    left: 30px;
     font-size: 30px;
     font-weight: bold;
-    padding-left: 40px;
-}
-
-#logo > a {
     color: white;
     text-decoration: none;
+    height: 50px;
 }
 
-#logo > a:hover {
+#logo:hover {
     color: gold;
 }
 
 #navigation {
     position: fixed;
-    top: 0;
-    right: 0;
+    top: 5px;
+    right: 50px;
     width: 500px;
     text-align: right;
     display: flex;
@@ -69,6 +103,18 @@ h1 {
     color: gold;
 }
 
+
+a {
+    color: darkblue;
+    text-decoration: none;
+}
+
+a:hover {
+    color: red;
+    text-decoration: none;
+}
+
+
 th, td {
     padding: 5px;
     background-color: ghostwhite;
@@ -87,4 +133,24 @@ th, td {
 #phone-number-error-message {
     font-size: 12px;
     color: red;
+}
+
+#login-register-links {
+    position: fixed;
+    top: 5px;
+    right: 10px;
+    display: flex;
+    flex-direction: row;
+}
+
+#login-card {
+    width: 440px;
+}
+
+#register-card {
+    width: 500px;
+}
+
+#dashboard-card {
+    width: 250px;
 }
