completed rate limiting

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -114,6 +114,11 @@ a:hover {
     text-decoration: none;
 }
 
+#send-button:disabled {
+    border: 1px solid #999999;
+    background-color: darkgrey;
+}
+
 
 th, td {
     padding: 5px;
